--- a/uploads/0.2/strapdown.css
+++ b/uploads/0.2/strapdown.css
@@ -8,6 +8,8 @@ This chunk is to fix Bootstrap so that the Markdown output looks good
 body {
   padding-top: 60px;
   padding-bottom: 40px;
+  padding-right: 15%;
+  padding-left: 15%;
   font-size: 15px;
   line-height: 150%;
 }
