--- a/uploads/0.2/strapdown.css
+++ b/uploads/0.2/strapdown.css
@@ -6,6 +6,7 @@ This chunk is to fix Bootstrap so that the Markdown output looks good
 *******************************************************************/
 
 body {
+  width: 50%;
   padding-top: 60px;
   padding-bottom: 40px;
   padding-right: 80px;
